[package]
name = "raft"
version = "1.0.0"
description = "Implementation of the Raft Concensus Algorithm"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
categories = []
keywords = ["raft"]
repository = "https://github.com/rhymu8354/Raft.git"
exclude = [
    "*.hpp",
    "*.cpp",
    "CMakeLists.txt"
]

[dependencies]
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
maplit = "1.0"
simple_logger = "1.11"
